implement: 本格的にGrowiのk8s設定を作るべく、詳細をブラッシュアップ.

--- a/gcp/gke/growi/elasticsearch.yaml
+++ b/gcp/gke/growi/elasticsearch.yaml
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: elasticsearch
-  namespace: growis
+  namespace: growi-tools
 spec:
   replicas: 1
   template:
@@ -26,7 +26,7 @@ metadata:
   labels:
     app: elasticsearch
   name: elasticsearch
-  namespace: growis
+  namespace: growi-tools
 spec:
   ports:
   - port: 9200
