--- a/gcp/gke/growi/mongo.yaml
+++ b/gcp/gke/growi/mongo.yaml
@@ -1,9 +1,32 @@
-apiVersion: extensions/v1beta1
-kind: Deployment
+# Storege
+kind: StorageClass
+apiVersion: storage.k8s.io/v1
+metadata:
+  name: growi-ssd
+  namespace: growi-tools
+  annotations:
+    storageclass.kubernetes.io/is-default-class: "false"
+  labels:
+    kubernetes.io/cluster-service: "true"
+provisioner: kubernetes.io/gce-pd
+parameters:
+  type: pd-ssd
+reclaimPolicy: Retain
+allowVolumeExpansion: true
+---
+# Database(mongo)
+apiVersion: apps/v1
+kind: StatefulSet
 metadata:
   name: mongo
-  namespace: growis
+  namespace: growi-tools
+  labels:
+    app: mongo
 spec:
+  serviceName: "mongo"
+  selector:
+    matchLabels:
+      app: mongo
   replicas: 1
   template:
     metadata:
@@ -11,28 +34,38 @@ spec:
         app: mongo
       name: mongo
     spec:
+      terminationGracePeriodSeconds: 60
       containers:
       - name: mongo
-        image: mongo:3.4
+        image: mongo:3.6
         ports:
         - containerPort: 27017
+        volumeMounts:
+        - name: mongodb-persistent
+          mountPath: /data
+  volumeClaimTemplates:
+  - metadata: 
+      name: mongodb-persistent
+      namespace: growi-tools
+    spec:
+      accessModes:
+        - ReadWriteOnce
+      storageClassName: growi-ssd
+      resources: 
+        requests:
+          storage: 4Gi
 ---
 apiVersion: v1
 kind: Service
 metadata:
+  name: mongo
+  namespace: growi-tools
   labels:
     app: mongo
-  name: mongo
-  namespace: growis
 spec:
-  externalTrafficPolicy: Cluster
   ports:
   - port: 27017
     protocol: TCP
     targetPort: 27017
   selector:
     app: mongo
-  sessionAffinity: None
-  type: LoadBalancer
-status:
-  loadBalancer: {}
