--- a/gcp/gke/growi/growi-application-manufest.yaml
+++ b/gcp/gke/growi/growi-application-manufest.yaml
@@ -19,7 +19,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   storageClassName: sc-growi-app
   gcePersistentDisk:
-    pdName: growi-disk-01
+    pdName: disk-growi-01
     fsType: ext4
 ---
 apiVersion: v1
@@ -49,7 +49,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   storageClassName: sc-growi-mongodb
   gcePersistentDisk:
-    pdName: growi-disk-02
+    pdName: disk-growi-02
     fsType: ext4
 ---
 apiVersion: v1
